Finalize code: wire API URL for frontend and deploy backend/frontend changes

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,17 @@ __pycache__/
 node_modules/
 *.pyc
 *.env
+
+# Local env files
+.env
+.env.local
+
+# Python artifacts
+__pycache__/
+*.pyc
+
+# Node modules
+node_modules/
+
+# Serverless output
+.serverless/
