--- a/package.json
+++ b/package.json
@@ -14,11 +14,25 @@
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "serverless-python-requirements": "^6.1.2"
   },
   "devDependencies": {
+    "concurrently": "^8.2.0",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "concurrently": "^8.2.0"
-  }
+    "tailwindcss": "^3.4.1"
+  },
+  "description": "This is a [Next.js](https://nextjs.org) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SupratikPanuganti/finai.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/SupratikPanuganti/finai/issues"
+  },
+  "homepage": "https://github.com/SupratikPanuganti/finai#readme"
 }
